fixed navbar collapse background color issue

--- a/src/style/navbar.scss
+++ b/src/style/navbar.scss
@@ -2,5 +2,9 @@
     display: none;
 }
 
+.navbar-nav {
+    background-color: $bg-color;
+}
+
 #main-navbar-wrapper {
 }
